# SSL4SED

./: .gitignore  CMDS.md  README.md  README_old.md  TODO.md  inference.py  pyproject.toml  setup.py
app/: __init__.py  inference.py
audio_analysis/: README.md  dataset_split_stats.csv  event_co_occurrence_matrix.csv  event_duration_statistics.csv  event_frequency_analysis.py  event_frequency_detailed.csv  event_overlap_correlation.py  global_event_frequency.csv  jaccard_similarity_matrix.csv  overlap_patterns.csv  pearson_correlation_matrix.csv  polyphonicity_distribution.csv  requirements.txt  run_all_analyses.py  spearman_correlation_matrix.csv  temporal_patterns_by_event.csv  test_structure.py  top_co_occurring_pairs.csv  top_correlated_pairs.csv
autrainer/: DCASE2019Task4-32k.yaml
desed_task/: data_augm.py
desed_task/dataio/: datasets_atst_sed.py
desed_task/evaluation/: evaluation_measures.py
desed_task/models/: CRNN.py  CRNN_beats.py  RNN.py
desed_task/utils/: __init__.py
src/: __init__.py
src/analysis/: advanced_overlap_analysis.py  event_summary.csv  overlap_confusion_matrix.py  summary_analysis.py
src/dataio/: datasets_atst_sed.py  sampler.py  verify_dataset.py
src/evaluation/: evaluation_measures.py
src/evaluation/psds/: PSDS_Evaluation.ipynb
src/models/: CNN.py  CRNN.py  CRNN_beats.py  CRNN_e2e.py  pos_embed.py  prediction_wrapper.py  preprocess.py  wrapper.py
src/models/asit/: ASIT_wrapper.py  utils.py  vision_transformer.py
src/models/atst/: atst_model.py
src/models/baseline/: CRNN.py
src/training/: train_stage1.py  train_stage2.py  train_utils.py
train/: train_stage1.py  train_stage2.py
train/confs/: stage1.yaml  stage2.yaml
train/local/: scheduler.py  stage1_trainer.py  stage2_trainer.py
(+13 files in other folders)
